--- a/ads.html
+++ b/ads.html
@@ -18,16 +18,16 @@
 </style>
 
 <!-- Social Bar Adsterra -->
-<script type="text/javascript" src="//pl26506468.profitableratecpm.com/78/d1/e9/78d1e923097f543ac1861e353f29ffad.js"></script>
+<script type="text/javascript" src="https://pl26506468.profitableratecpm.com/78/d1/e9/78d1e923097f543ac1861e353f29ffad.js"></script>
 
 <!-- Popunder Adsterra -->
-<script type='text/javascript' src='//pl26506473.profitableratecpm.com/62/f1/44/62f144fc83c87ceaa3a1f24a2ea51034.js'></script>
+<script type="text/javascript" src="https://pl26506473.profitableratecpm.com/62/f1/44/62f144fc83c87ceaa3a1f24a2ea51034.js"></script>
 
 </head>
 <body>
 
 <!-- Native Banner Adsterra -->
-<script async="async" data-cfasync="false" src="//pl26506472.profitableratecpm.com/4d683df6f28cf8655f0ec323e25a7e55/invoke.js"></script>
+<script async="async" data-cfasync="false" src="https://pl26506472.profitableratecpm.com/4d683df6f28cf8655f0ec323e25a7e55/invoke.js"></script>
 <div id="container-4d683df6f28cf8655f0ec323e25a7e55" style="width: 100%; max-width: 320px;"></div>
 
 </body>
