--- a/ads.html
+++ b/ads.html
@@ -1,34 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta http-equiv="refresh" content="6; url='https://t.me/BellaPoarchhBOT?start=from_vip_page'">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ad Page with Native + Social Bar + Popunder</title>
+<title>VIP Temptation Lounge</title>
+
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
+<!-- Adsterra Social Bar -->
+<script type="text/javascript" src="//pl26506468.profitableratecpm.com/78/d1/e9/78d1e923097f543ac1861e353f29ffad.js"></script>
+
 <style>
-  body {
-    margin: 0;
-    padding: 0;
-    background: transparent;
-    overflow: hidden;
+  * { margin: 0; padding: 0; box-sizing: border-box; }
+  html, body {
+    height: 100%;
+    font-family: 'Poppins', sans-serif;
+    background: linear-gradient(135deg, #0b0b0b, #1a1a1a);
+    color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    overflow: hidden;
+    position: relative;
+  }
+  .background {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url('https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgyqWZCvLwh_QzPfpGRH29h5i90tPJlLrMgFSVV7aQiEwHNO1ljcn0Wc-J3W7xySteYOCyBa96uy0pZeBUBPeZY4Azy4bBWAiyYu_Wx15XuHX72uDIyxCbZatb6thKb8qRckRDUOXaLF4nJlIZLRvTPIen5bhqegXuvQCH188qZgAEnRCAxBHnKf9Vz-yk/s1600/ey.jpg') no-repeat center/cover;
+    filter: brightness(0.4) blur(6px);
+    z-index: -1;
+  }
+  .content-box {
+    background: rgba(255, 255, 255, 0.08);
+    backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 20px;
+    padding: 30px 20px;
+    box-shadow: 0 8px 32px rgba(0,0,0,0.5);
+    width: 90%;
+    max-width: 380px;
+    text-align: center;
+    animation: fadeIn 1s ease;
+  }
+  @keyframes fadeIn {
+    from { opacity: 0; transform: scale(0.95); }
+    to { opacity: 1; transform: scale(1); }
+  }
+  h1 {
+    font-size: 2em;
+    margin-bottom: 15px;
+    color: #ff69b4;
+    text-shadow: 0 0 10px #ff69b4;
+  }
+  img {
+    width: 140px;
+    border-radius: 15px;
+    margin-bottom: 20px;
+    box-shadow: 0 8px 20px rgba(255,105,180,0.5);
+  }
+  .members-info {
+    font-size: 1em;
+    margin-bottom: 20px;
+    color: #ddd;
+  }
+  .progress-container {
+    width: 100%;
+    background: rgba(255, 255, 255, 0.2);
+    height: 10px;
+    border-radius: 50px;
+    margin-bottom: 20px;
+    overflow: hidden;
+  }
+  .progress-bar {
+    height: 100%;
+    width: 5%;
+    background: linear-gradient(90deg, #ff69b4, #ff1493);
+    transition: width 0.5s ease;
+  }
+  .join-btn {
+    display: inline-block;
+    background: linear-gradient(135deg, #ff69b4, #ff1493);
+    color: #0f0f0f;
+    font-weight: bold;
+    padding: 12px 25px;
+    font-size: 1em;
+    border-radius: 50px;
+    text-decoration: none;
+    margin-top: 15px;
+    box-shadow: 0 8px 20px rgba(255,105,180,0.5);
+    transition: all 0.3s ease;
+    width: 100%;
+  }
+  .join-btn:hover {
+    background: linear-gradient(135deg, #ff1493, #ff69b4);
+    box-shadow: 0 8px 20px rgba(255,20,147,0.6);
+    transform: scale(1.05);
+  }
+  .ad-banner {
+    margin-top: 25px;
+    display: flex;
+    justify-content: center;
+    animation: fadeInAd 2s ease;
+  }
+  @keyframes fadeInAd {
+    from { opacity: 0; }
+    to { opacity: 1; }
   }
 </style>
-
-<!-- Social Bar Adsterra -->
-<script type="text/javascript" src="https://pl26506468.profitableratecpm.com/78/d1/e9/78d1e923097f543ac1861e353f29ffad.js"></script>
-
-<!-- Popunder Adsterra -->
-<script type="text/javascript" src="https://pl26506473.profitableratecpm.com/62/f1/44/62f144fc83c87ceaa3a1f24a2ea51034.js"></script>
 
 </head>
 <body>
 
-<!-- Native Banner Adsterra -->
-<script async="async" data-cfasync="false" src="https://pl26506472.profitableratecpm.com/4d683df6f28cf8655f0ec323e25a7e55/invoke.js"></script>
-<div id="container-4d683df6f28cf8655f0ec323e25a7e55" style="width: 100%; max-width: 320px;"></div>
+<div class="background"></div>
+
+<div class="content-box">
+    <img src="https://blogger.googleusercontent.com/img/a/AVvXsEg8IR49SwocMw1pNFU3GbevcS9TshAII-HKzPMnBy9OkeYC3KEyGeIe2pDeEmTLwOncbjOQPp3E9IpZW9zL9XFed9g1dlCHe2vyzZz5VhpA5BX_fN0eNdjmupfPvfWFBrM4DCcPImE1wavCpyJytl7ZjeUgxQ5xnKkhSutZfbuqi-f9iSIMtcIoPhPQo44" alt="Group Image">
+    <h1>Unlock Pinay Walker 🔥</h1>
+    <p class="members-info">Share in 3 groups to gain access.</p>
+
+    <div class="progress-container">
+      <div class="progress-bar" id="progress-bar"></div>
+    </div>
+
+    <a href="https://telegram.me/share/url?url=https://t.me/pnywalkrbot?startapp=watchnow" class="join-btn" id="join-btn">
+      SHARE <span id="share-count">0/3</span>
+    </a>
+
+    <!-- Native Banner Adsterra -->
+    <div class="ad-banner">
+      <script async="async" data-cfasync="false" src="//pl26506472.profitableratecpm.com/4d683df6f28cf8655f0ec323e25a7e55/invoke.js"></script>
+      <div id="container-4d683df6f28cf8655f0ec323e25a7e55"></div>
+    </div>
+
+</div>
+
+<script>
+(function(){
+    function updateProgress() {
+        shareCount++;
+        shareCounter.textContent = `${shareCount}/3`;
+        window.open(shareUrl, "_blank");
+        setTimeout(() => {
+            const progress = (shareCount / maxShares) * 100;
+            progressBar.style.width = progress + '%';
+            if (shareCount >= maxShares) {
+                window.location.href = "https://t.me/+pQ-b8slY0FVlNDQ1";
+            }
+        }, 1000);
+    }
+
+    const shareUrl = "https://telegram.me/share/url?url=https://t.me/pnywalkrbot?startapp=WatchNow";
+    let shareCount = 0;
+    const maxShares = 3;
+    const progressBar = document.getElementById('progress-bar');
+    const shareCounter = document.getElementById('share-count');
+
+    document.getElementById('join-btn').addEventListener('click', function(e) {
+        e.preventDefault();
+        if (shareCount < maxShares) updateProgress();
+    });
+})();
+</script>
 
 </body>
 </html>
